eyedblibdir=$(includedir)/eyedblib
eyedblib_HEADERS= \
butils.h \
connman.h \
filelib.h \
iassert.h \
log.h \
machtypes.h \
m_malloc.h \
m_mem.h \
performer.h \
probe.h \
rpc_be.h \
rpcdb_be.h \
rpcdb.h \
rpc_fe.h \
rpc.h \
rpc_lib.h \
semlib.h \
shmlib.h \
std_alloc.h \
stdlist.h \
strutils.h \
thread.h \
xdr.h 

nodist_eyedblib_HEADERS= \
endian.h
