lib_LTLIBRARIES= libeyedb.la

libeyedb_la_SOURCES=				\
AbstractIterator.cc				\
Agregat.cc					\
AgregatClass.cc					\
Attribute_inv.cc				\
Architecture.cc					\
Argument.cc					\
Argument_code.cc				\
Attribute.cc					\
AttrNative.cc					\
Basic.cc					\
BEQueue.cc					\
BufferString.cc					\
ObjCache.cc					\
Class.cc					\
ClassIterator.cc				\
ClassPeer.cc					\
ClockConverter.cc				\
code.cc						\
CollectionBE.cc					\
CollArray.cc					\
CollBag.cc					\
CollCache.cc					\
CollectionClass.cc				\
Collection.cc					\
CollectionIterator.cc				\
CollectionPeer.cc				\
CollList.cc					\
CollSet.cc					\
Config.cc					\
Connection.cc					\
ConnectionPeer.cc				\
Database.cc					\
Datafile.cc					\
Dataspace.cc					\
Date.cc						\
datelib.cc					\
Attribute_idx.cc				\
ClassConversion.cc				\
Enum.cc						\
EnumClass.cc					\
Executable.cc					\
ExecutableCache.cc				\
opts.cc						\
gbx.cc						\
GetOpt.cc					\
GregorianCalendarConverter.cc			\
odlgen_C.cc					\
odlgen_Java.cc					\
odlgen_utils.cc					\
GenContext.cc					\
GenHashTable.cc					\
api.cc						\
DBM_Database.cc					\
syscls_impl.cc					\
kernel.cc					\
api_lib.cc					\
Oid.cc						\
rpc_lib.cc					\
linklist.cc					\
misc.cc						\
IndexImpl.cc					\
Instance.cc					\
InvOidContext.cc				\
Iterator.cc					\
IteratorBE.cc					\
ObjectLocation.cc				\
Log.cc						\
make_obj.cc					\
SchemaInfo.cc					\
Object.cc					\
ObjectPeer.cc					\
odl.cc						\
odl_update.cc					\
OQLBE.cc					\
OQL.cc						\
OQLBEIterator.cc				\
OQLIterator.cc					\
oqlarr.cc					\
oqlatom.cc					\
oqlbase.cc					\
oqlcast.cc					\
oqlcoll.cc					\
oqldot.cc					\
oqlflwctl.cc					\
oqlfunc.cc					\
oqlident.cc					\
oqliter.cc					\
IteratorBEEngine.cc				\
oqllib.cc					\
oqllist.cc					\
oqlmisc.cc					\
oqlmth.cc					\
oqlnewdel.cc					\
oqlop.cc					\
oqlselect.cc					\
oqlset.cc					\
oqlsort.cc					\
oqltime.cc					\
OString.cc					\
IteratorAtom.cc					\
RecMode.cc					\
Schema.cc					\
SessionLog.cc					\
Exception.cc					\
StructClass.cc					\
ThreadPoolManager.cc				\
Time.cc						\
TimeInterval.cc					\
TimeStamp.cc					\
Transaction.cc					\
Union.cc					\
UnionClass.cc					\
Value.cc					\
ValueCache.cc					\
odl.tab.cc					\
oql.tab.cc					\
DBM.cc						\
syscls.cc					\
oqlctb.cc					\
utils.cc

BUILT_SOURCES=lex.oql.c lex.odl.c

# The last directory is needed for endian.h, which is generated by configure.in
INCLUDES=-I$(top_srcdir)/src -I$(top_srcdir)/include -I$(top_builddir)/include

libeyedb_la_LINK= $(LTCXXCOMPILE) -c -o comp_time.lo $(srcdir)/comp_time.cc ; $(CXXLINK) comp_time.lo
libeyedb_la_LIBADD=config_defaults.lo

CLEANFILES=oql.tab.cc odl.tab.cc oql.output odl.output $(BUILT_SOURCES)

%.tab.cc: $(srcdir)/%.y
	$(YACC) -b $* -v $(srcdir)/$*.y
	sed s/yy/$*/g $*.tab.c > $*.tab.cc
	rm $*.tab.c

lex.%.c: $(srcdir)/%.l
	USEFLEX=1 $(top_srcdir)/scripts/eyedb-lex $(srcdir)/$*

config_defaults.lo: $(srcdir)/config_defaults.cc
	$(LTCXXCOMPILE) -DBINDIR=\"$(bindir)\" -DSYSCONFDIR=\"$(sysconfdir)\" -DEYEDB_VERSION=\"@EYEDB_VERSION@\" -DEYEDB_NUMVERSION=\"@EYEDB_NUMVERSION@\" -c -o config_defaults.lo $<

# ODL->C++
EYEDBODL_exe=$(bindir)/eyedbodl

EYEDBODL = $(EYEDBODL_exe) --gencode=C++ --output-dir=$(top_srcdir)/src/eyedb

EYEDBODLFLAGS_DBM = --package=DBM --schema-name=eyedbdbm --attr-style=implicit --no-rootclass --namespace=eyedb

$(top_srcdir)/src/eyedb/DBM.cc : DBM.odl
	if test -x $(EYEDBODL_exe) ; then \
		$(EYEDBODL) $(EYEDBODLFLAGS_DBM) $< ; \
	else \
		echo Warning: $(EYEDBODL) not found, using $*.cc old C++ code; touch $*.cc ; \
	fi
	sed -e 's|"DBM.h"|<eyedb/DBM.h>|' $(top_srcdir)/src/eyedb/DBM.cc > DBM.cc.out
	mv DBM.cc.out $(top_srcdir)/src/eyedb/DBM.cc; \
	mv $(top_srcdir)/src/eyedb/DBM.h $(top_srcdir)/include/eyedb/.

EYEDBODLFLAGS_syscls = --cpp-flags=-DCOMPLETE=0 --export --package=syscls --schema-name=eyedb --attr-style=explicit --down-casting=yes --class-enums=no --no-rootclass --system-class --namespace=eyedb

$(top_srcdir)/src/eyedb/syscls.cc: syscls.odl
	if test -x $(EYEDBODL_exe) ; then \
		$(EYEDBODL) $(EYEDBODLFLAGS_syscls) $< ; \
	else \
		echo Warning: $(EYEDBODL) not found, using $*.cc old C++ code; touch $*.cc ; \
	fi
	for f in syscls.cc sysclsstubsbe.cc sysclsstubsfe.cc ; do \
	sed -e 's|"syscls.h"|<eyedb/syscls.h>|' $(top_srcdir)/src/eyedb/$$f > $$f.out; \
	mv $$f.out $(top_srcdir)/src/eyedb/$$f; \
	done; \
	mv $(top_srcdir)/src/eyedb/syscls.h $(top_srcdir)/include/eyedb/.

EYEDBODLFLAGS_oqlctb = --package=oqlctb --schema-name=eyedb --attr-style=explicit --down-casting=yes --class-enums=yes --no-rootclass --error-policy=status --system-class --namespace=eyedb

$(top_srcdir)/src/eyedb/oqlctb.cc $(top_srcdir)/src/eyedb/oqlctb.h: oqlctb.odl
	if test -x $(EYEDBODL_exe) ; then \
		$(EYEDBODL) $(EYEDBODLFLAGS_oqlctb) $< ; \
	else \
		echo Warning: $(EYEDBODL) not found, using $*.cc old C++ code; touch $*.cc ; \
	fi

EYEDBODLFLAGS_utils = --export --package=utils --schema-name=eyedb --attr-style=explicit --down-casting=yes --class-enums=yes --no-rootclass --system-class --error-policy=exception --namespace=eyedb

$(top_srcdir)/src/eyedb/utils.cc: utils.odl
	if test -x $(EYEDBODL_exe) ; then \
		$(EYEDBODL) $(EYEDBODLFLAGS_utils) $< ; \
	else \
		echo Warning: $(EYEDBODL) not found, using $*.cc old C++ code; touch $*.cc ; \
	fi
	for f in utils.cc utilsstubsbe.cc utilsstubsfe.cc ; do \
	sed -e 's|"utils.h"|<eyedb/utils.h>|' $(top_srcdir)/src/eyedb/$$f > $$f.out; \
	mv $$f.out $(top_srcdir)/src/eyedb/$$f; \
	done; \
	mv $(top_srcdir)/src/eyedb/utils.h $(top_srcdir)/include/eyedb/.

EXTRA_DIST= odl.l odl.y oql.l oql.y DBM.odl syscls.odl oqlctb.odl utils.odl comp_time.cc comp_time.h make_pattern.cc

somthdir=$(pkglibdir)
somth_LTLIBRARIES=oqlctbmthbe.la oqlctbmthfe.la utilsmthbe.la utilsmthfe.la sysclsmthbe.la sysclsmthfe.la 
oqlctbmthbe_la_SOURCES=oqlctbmthbe.cc oqlctbstubsbe.cc
oqlctbmthbe_la_LDFLAGS=-module -release $(EYEDB_VERSION)
oqlctbmthfe_la_SOURCES=oqlctbmthfe.cc oqlctbstubsfe.cc
oqlctbmthfe_la_LDFLAGS=-module -release $(EYEDB_VERSION)
utilsmthbe_la_SOURCES=utilsmthbe.cc utilsstubsbe.cc
utilsmthbe_la_LDFLAGS=-module -release $(EYEDB_VERSION)
utilsmthfe_la_SOURCES=utilsmthfe.cc utilsstubsfe.cc
utilsmthfe_la_LDFLAGS=-module -release $(EYEDB_VERSION)
sysclsmthbe_la_SOURCES=sysclsmthbe.cc sysclsstubsbe.cc
sysclsmthbe_la_LDFLAGS=-module -release $(EYEDB_VERSION)
sysclsmthfe_la_SOURCES=sysclsmthfe.cc sysclsstubsfe.cc
sysclsmthfe_la_LDFLAGS=-module -release $(EYEDB_VERSION)

bin_PROGRAMS=					\
eyedbd						\
eyedboql					\
eyedbodl					\
eyedbloca					\
eyedbidxadmin					\
eyedbprotadmin					\
eyedbconsadmin					\
eyedbcollimpladmin				\
eyedbcrypt					\
eyedbgetenv					\
eyedbrc						\
eyedbadmin

EYEDBSVLIBS=libeyedb.la $(top_builddir)/src/lib/libeyedbrpcbe.la $(top_builddir)/src/lib/libeyedbrpcfe.la $(top_builddir)/src/eyedbsm/libeyedbsm.la $(top_builddir)/src/lib/libeyedbutils.la

EYEDBCLLIBS=libeyedb.la $(top_builddir)/src/lib/libeyedbrpcfe.la $(top_builddir)/src/eyedbsm/libeyedbsm.la $(top_builddir)/src/lib/libeyedbutils.la

eyedbd_SOURCES= eyedbd.cc serv.cc serv_lib.cc rpc_lib.cc misc.cc
eyedbd_LDADD= $(EYEDBSVLIBS)
eyedbd_CFLAGS = $(AM_CFLAGS) # renaming trick
eyedbd_CXXFLAGS = $(AM_CXXFLAGS) # renaming trick

eyedboql_SOURCES= eyedboql.cc OQLParser.cc # remote.c
eyedboql_CFLAGS=$(AM_CFLAGS) $(X_CFLAGS)
eyedboql_LDADD= $(EYEDBCLLIBS)

eyedbodl_SOURCES= eyedbodl.cc
eyedbodl_LDADD= $(EYEDBCLLIBS)

eyedbloca_SOURCES= eyedbloca.cc
eyedbloca_LDADD= $(EYEDBCLLIBS)

eyedbidxadmin_SOURCES= eyedbidxadmin.cc
eyedbidxadmin_LDADD= $(EYEDBCLLIBS)

eyedbprotadmin_SOURCES= eyedbprotadmin.cc
eyedbprotadmin_LDADD= $(EYEDBCLLIBS)

eyedbconsadmin_SOURCES= eyedbconsadmin.cc
eyedbconsadmin_LDADD= $(EYEDBCLLIBS)

eyedbcollimpladmin_SOURCES= eyedbcollimpladmin.cc
eyedbcollimpladmin_LDADD= $(EYEDBCLLIBS)

eyedbcrypt_SOURCES= eyedbcrypt.cc
eyedbcrypt_LDADD= $(EYEDBCLLIBS)

eyedbgetenv_SOURCES= eyedbgetenv.cc
eyedbgetenv_LDADD= $(EYEDBCLLIBS)

eyedbrc_SOURCES= eyedbrc.cc
eyedbrc_LDADD= $(EYEDBCLLIBS)

eyedbadmin_SOURCES=eyedbadmin.cc
eyedbadmin_LDADD= $(EYEDBCLLIBS)

noinst_HEADERS= \
api_lib.h \
Argument_code.h \
Attribute_p.h \
AttrNative.h \
base_p.h \
BEQueue.h \
BufferString.h \
CalendarConverter.h \
ClockConverter.h \
code.h \
CollCache.h \
CollectionBE.h \
CollectionPeer.h \
ConnectionPeer.h \
datelib.h \
DBM_Database.h \
db_p.h \
ExecutableCache.h \
Executable.h \
eyedb_p.h \
eyedbversion.h \
GenContext.h \
GetOpt.h \
GregorianCalendarConverter.h \
InvOidContext.h \
IteratorAtom.h \
IteratorBEEngine.h \
IteratorBE.h \
Iterator.h \
kernel.h \
kernel_p.h \
make_obj.h \
misc.h \
odlgen_utils.h \
odl.h \
OQLBE.h \
OQLBEIterator.h \
oqlctb.h \
oql_p.h \
oqlinline.h \
oqliter.h \
OQLParser.h \
rpc.h \
rpc_lib.h \
SchemaInfo.h \
serv_lib.h \
SessionLog.h \
ThreadPoolManager.h \
UserDataHT.h \
ValueCache.h

EYEDBADMIN_LINKS= \
	eyedbdbmcreate \
	eyedbdbcreate \
	eyedbdbdelete \
	eyedbdbmove \
	eyedbdbcopy \
	eyedbdbrename \
	eyedbdbexport \
	eyedbdbimport \
	eyedbdatcreate \
	eyedbdatdelete \
	eyedbdatmove \
	eyedbdatresize \
	eyedbdatdefragment \
	eyedbdatrename \
	eyedbdatlist \
	eyedbdspcreate \
	eyedbdspupdate \
	eyedbdspdelete \
	eyedbdsprename \
	eyedbdsplist \
	eyedbdspsetdefault \
	eyedbdspgetdefault \
	eyedbdspsetcurdat \
	eyedbdspgetcurdat \
	eyedbuseradd \
	eyedbuserdelete \
	eyedbuserpasswd \
	eyedbpasswd \
	eyedbdbaccess \
	eyedbuserdbaccess \
	eyedbsysaccess \
	eyedbuserlist \
	eyedbdblist

EYEDBLOCA_LINKS= \
	eyedbgetdefdsp \
	eyedbsetdefdsp \
	eyedbgetdefidxdsp \
	eyedbsetdefidxdsp \
	eyedbgetdefinstdsp \
	eyedbsetdefinstdsp \
	eyedbgetdefattrdsp \
	eyedbsetdefattrdsp \
	eyedbgetdefcolldsp \
	eyedbsetdefcolldsp \
	eyedbgetidxloca \
	eyedbmvidx \
	eyedbgetinstloca \
	eyedbmvinst \
	eyedbgetobjloca \
	eyedbmvobj \
	eyedbgetcollloca \
	eyedbmvcoll \
	eyedbgetattrloca \
	eyedbmvattr 

EYEDBIDXADMIN_LINKS= \
	eyedbidxcreate \
	eyedbidxupdate \
	eyedbidxsimulate \
	eyedbidxlist \
	eyedbidxstats \
	eyedbidxdelete 

EYEDBCONSADMIN_LINKS= \
	eyedbconscreate \
	eyedbconslist \
	eyedbconsdelete 

EYEDBCOLLIMPLADMIN_LINKS= \
	eyedbcollimplupdate \
	eyedbcollimplsimulate \
	eyedbcollimpllist \
	eyedbcollimplstats \
	eyedbcollimplsetdef \
	eyedbcollimplgetdef 

XBIN=$(DESTDIR)$(bindir)/../xbin

XBIN_ADMIN=\
  dbadmin \
  dbmcreate \
  dbcreate \
  dbdelete \
  dbmove \
  dbcopy \
  datcreate \
  datdelete \
  datmove \
  datresize \
  datdefragment \
  datlist \
  datrename \
  dspcreate \
  dspupdate \
  dspdelete \
  dsprename \
  dsplist \
  dspsetdefault \
  dspgetdefault \
  dspsetcurdat \
  dspgetcurdat \
  dbexport \
  dbimport \
  dbrename \
  useradd \
  userdelete \
  userpasswd \
  dbaccess \
  userdbaccess \
  sysaccess \
  userlist \
  dblist

XBIN_LOCA=\
  getdefdsp \
  setdefdsp \
  getdefidxdsp \
  setdefidxdsp \
  getdefinstdsp \
  setdefinstdsp \
  getdefattrdsp \
  setdefattrdsp \
  getdefcolldsp \
  setdefcolldsp \
  getidxloca \
  mvidx \
  getinstloca \
  mvinst \
  getobjloca \
  mvobj \
  getcollloca \
  mvcoll \
  getattrloca \
  mvattr

XBIN_IDXADMIN=\
  idxcreate \
  idxupdate \
  idxsimulate \
  idxlist \
  idxstats \
  idxdelete \
  idxadmin

XBIN_CONSADMIN=\
  conscreate \
  conslist \
  consdelete \
  consadmin

XBIN_COLLIMPLADMIN=\
   collimplupdate \
   collimplsimulate \
   collimpllist \
   collimplstats \
   collimplsetdef \
   collimplgetdef \
   collimpladmin

install-exec-hook:
	-make_link() { if [ ! -h $$2 ] ; then ln -s $$1 $$2 ; fi ; } ; \
	cd $(DESTDIR)$(bindir) ; \
	for f in $(EYEDBADMIN_LINKS) ; do make_link eyedbadmin $$f ;  done ; \
	for f in $(EYEDBLOCA_LINKS) ; do make_link eyedbloca $$f ; done ; \
	for f in $(EYEDBIDXADMIN_LINKS) ; do make_link eyedbidxadmin $$f ; done ; \
	for f in $(EYEDBCONSADMIN_LINKS) ; do make_link eyedbconsadmin $$f ; done ; \
	for f in $(EYEDBCOLLIMPLADMIN_LINKS) ; do make_link eyedbcollimpladmin $$f ; done ; \
	if [ ! -d $(XBIN) ] ; then mkdir $(XBIN) ; fi ; \
	cd $(XBIN) ; \
	make_link ../bin/eyedboql oql ; \
	make_link ../bin/eyedbodl odl ; \
	make_link ../bin/eyedbsmtool smtool ; \
	for f in $(XBIN_ADMIN) ; do make_link ../bin/eyedbadmin $$f ; done ; \
	for f in $(XBIN_LOCA) ; do make_link ../bin/eyedbloca $$f ; done ; \
	for f in $(XBIN_IDXADMIN) ; do make_link ../bin/eyedbidxadmin $$f ; done ; \
	for f in $(XBIN_CONSADMIN) ; do make_link ../bin/eyedbconsadmin $$f ; done ; \
	for f in $(XBIN_CONSADMIN) ; do make_link ../bin/eyedbconsadmin $$f ; done ; \
	for f in $(XBIN_COLLIMPLADMIN) ; do make_link ../bin/eyedbcollimpladmin $$f ; done ; 


